--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lenis": "^1.1.6",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
