--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "lenis": "^1.1.6",
     "next": "14.2.5",
+    "posthog-js": "^1.150.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
