--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.8",
     "lenis": "^1.1.6",
     "next": "14.2.5",
     "posthog-js": "^1.150.0",
